Bug 139243 - Permanent Border round "Open File" in start panel
Summary: Permanent Border round "Open File" in start panel
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.1.0.1 rc
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-12-26 11:32 UTC by Robert Großkopf
Modified: 2021-02-26 14:18 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Different screenshots show the different behavior of start panel (86.66 KB, application/pdf)
2020-12-26 11:32 UTC, Robert Großkopf
Details
Screenshot (40.65 KB, image/png)
2021-02-23 09:19 UTC, Heiko Tietze
Details
Screenshot with gtk3 VCL plugin, from 6.3 bibisect repo (38.68 KB, image/png)
2021-02-23 09:55 UTC, Michael Weghorn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2020-12-26 11:32:00 UTC
Created attachment 168500 [details]
Different screenshots show the different behavior of start panel

Open LO in 7.1.0.1.
At the left you see a border round "Open File". In LO 7.0.4.2 "Open File" has been (wrongly) marked as chosen. In LO 6.4.6.2 "Open File" isn't marked.

The behavior of a permanent border with a doubled line at the bottom will change when, for example, starting a menu. But it will appear again.

Best behavior would be the behavior of LO 6.4.6.2: "Open File" will only be marked when it is chosen.

Bug appears under OpenSUSE 15.2 64bit rpm Linux.
Comment 1 Heiko Tietze 2021-02-23 09:19:06 UTC
Created attachment 169984 [details]
Screenshot

Menus and UIs in general have three states: in focus (pressing enter or space activates the control), hoover (clicking this objects brings it into focus), activated aka pressed but not yet released, and none. Now it depends on the system theme how these states are represented. Breeze apparently paints another line on the bottom of focused controls, with VCL=gen you get none of these hints. So it's a NAB/NOB for me. 

The only discrepancy is that one of the two menu button (the last selected) Recent Documents and Templates is always highlighted.
Comment 2 Heiko Tietze 2021-02-23 09:19:28 UTC
Do you agree, Michael?
Comment 3 Michael Weghorn 2021-02-23 09:55:41 UTC
Created attachment 169991 [details]
Screenshot with gtk3 VCL plugin, from 6.3 bibisect repo

(In reply to Heiko Tietze from comment #1)
> Menus and UIs in general have three states: in focus (pressing enter or
> space activates the control), hoover (clicking this objects brings it into
> focus), activated aka pressed but not yet released, and none. Now it depends
> on the system theme how these states are represented. Breeze apparently
> paints another line on the bottom of focused controls, with VCL=gen you get
> none of these hints. So it's a NAB/NOB for me. 
> 
> The only discrepancy is that one of the two menu button (the last selected)
> Recent Documents and Templates is always highlighted.

I quickly tested this and what Heiko says IMHO describes exactly what's happening.
That does not seem to be new, I see the same behavior when e.g. using the gtk3 VCL plugin in the last LO version from the 6.3 bibisect repo (s. sattached screenshot):

Version: 6.3.5.0.0+
Build ID: d1450f5bddd0f108078e0dfb11c9f130175fafe7
CPU threads: 12; OS: Linux 5.10; UI render: default; VCL: gtk3; 
Locale: en-GB (en_GB.UTF-8); UI-Language: en-US
Calc: threaded

Whether automatically selecting a UI element in start center when hovering over it (i.e. combine the hover/selected state) seems to be a choice one can make either way.
(e.g. in both gtk or Qt menus or context menus, hovering over an entry using the mouse also automatically selects it, which I'd personally also find more intuitive for the start center case, but I'm not an expert here)
Comment 4 Heiko Tietze 2021-02-23 10:16:37 UTC
Resolving as NAB. Please reopen if you disagree, Robert.
Comment 5 Heiko Tietze 2021-02-24 12:04:08 UTC
Submitted a patch waiting for review.
Comment 6 Commit Notification 2021-02-26 14:18:28 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f9779894a5fdcc2c46f2d4cc306f98d460570cac

Resolves tdf#139243 - UI glitch in start center

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.