Resolves tdf#139243 - UI glitch in start center

No focus by default; requires pressing F6 now to be accessible

Change-Id: I8f1b49f5fdb3fdf8a84b779c1e8c4df22c3a91f3