sfx2/source/dialog/backingwindow.cxx
@@ -187,7 +187,6 @@ BackingWindow::BackingWindow(vcl::Window* i_pParent)
     Reference<XDesktop2> xDesktop = Desktop::create( comphelper::getProcessComponentContext() );
     mxDesktopDispatchProvider = xDesktop;
 
-    mxOpenButton->grab_focus();
 }
 
 IMPL_LINK(BackingWindow, ClickHelpHdl, weld::Button&, rButton, void)
@@ -271,7 +270,6 @@ void BackingWindow::initControls()
     mxAllRecentThumbnails->mnFileTypes |= sfx2::ApplicationType::TYPE_OTHER;
     mxAllRecentThumbnails->Reload();
     mxAllRecentThumbnails->ShowTooltips( true );
-    mxRecentButton->set_active(true);
 
     //initialize Template view
     mxLocalView->Hide();
